fixed navbar spacing, added hashlink to top left corner of landing page

--- a/ash-website/src/components/LandingPage.css
+++ b/ash-website/src/components/LandingPage.css
@@ -1,8 +1,15 @@
 .nav-bar {
-  padding: 20px;
+  padding: 50px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.wacc-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
 }
 
@@ -12,8 +19,6 @@
 }
 
 .moonclouds-container {
-  border-color: aliceblue;
-  border-style: solid;
   display: flex;
   justify-content: flex-start;
   width: 100%;
@@ -42,8 +47,8 @@
   height: 100%;
   height: auto;
   width: 100%;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 80px;
+  margin-bottom: 90px;
 }
 
 .name-image {
